--- a/House Price Predict_Model/house price.ipynb
+++ b/House Price Predict_Model/house price.ipynb
@@ -4059,7 +4059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4071,27 +4071,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4014"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "columns={\n",
-    "    'location_col':[x.lower() for x in X.columns]\n",
+    "        'location_col':[x.lower() for x in X.columns]\n",
     "}\n",
     "with open('columns.json','w') as f:\n",
-    "    f.write(json.dumps(columns))"
+    "    json.dump(columns,f)\n",
+    "    f.close()"
    ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
- 
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
